force-app/main/default/objects/REVA_Hostel_Leave_Request__c/REVA_Hostel_Leave_Request__c.object-meta.xml
<CustomObject>
    <label>REVA Hostel Leave Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>REVA Hostel Leave Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Hostel Leave Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>