force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check  In</label>
    <type>Checkbox</type>
</CustomField>