force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Id</field>
            <operation>equals</operation>
            <valueField>$User.ContactId</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>REVA Hostel Leave Requests</relationshipLabel>
    <relationshipName>REVA_Hostel_Leave_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>