force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Contact_details__c.field-meta.xml
<CustomField>
    <fullName>Contact_details__c</fullName>
    <formula>IF(NOT( ISBLANK ( Contact__r.Father__c ) ),  Contact__r.Father__r.FirstName&amp;&apos; &apos;&amp;Contact__r.Father__r.LastName&amp;&apos;, &apos;&amp;Contact__r.RH_Parent_Phone_Number__c ,  IF(NOT( ISBLANK (Contact__r.Mother__c) ), Contact__r.Mother__r.FirstName&amp;&apos; &apos;&amp;Contact__r.Mother__r.LastName&amp;&apos;, &apos;&amp;Contact__r.RH_Parent_Phone_Number__c,  IF( NOT( ISBLANK(Contact__r.Guardian__c) ) , Contact__r.Guardian__r.FirstName&amp;&apos; &apos;&amp;Contact__r.Guardian__r.LastName&amp;&apos;, &apos;&amp;Contact__r.RH_Parent_Phone_Number__c, &apos;&apos;) ) )</formula>
    <label>Contact details</label>
    <type>Text</type>
</CustomField>