force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Note_to_the_approver__c.field-meta.xml
<CustomField>
    <fullName>Note_to_the_approver__c</fullName>
    <inlineHelpText>Place of visit
Mode of transportation
Description</inlineHelpText>
    <label>Note to the approver</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>