force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Reason_For_Leave__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Leave__c</fullName>
    <label>Reason For Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Going Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>