force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leave Requested</fullName>
                <default>true</default>
                <label>Leave Requested</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Check Out</fullName>
            </value>
            <value>
                <fullName>Check In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>