force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Total_Leaves_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_in_Days__c</fullName>
    <formula>DATETIMEVALUE( End_Date_and_Time__c ) - DATETIMEVALUE( Start_Date_and_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Leaves in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>