force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Visiting_address__c.field-meta.xml
<CustomField>
    <fullName>Visiting_address__c</fullName>
    <description>Visiting Address Of Hostel Student</description>
    <label>Visiting address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>