force-app/main/default/objects/REVA_Hostel_Leave_Request__c/fields/Warden__c.field-meta.xml
<CustomField>
    <fullName>Warden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warden</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REVA_Hostel_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>