force-app/main/default/objects/REVA_Hostel_Leave_Request__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date_and_Time__c)),
    NOT(ISBLANK(End_Date_and_Time__c)),
   End_Date_and_Time__c &lt; Start_Date_and_Time__c
)</errorConditionFormula>
    <errorMessage>End date and time should be equal or greater than start date and time</errorMessage>
</ValidationRule>