force-app/main/default/objects/REVA_Hostel_Leave_Request__c/validationRules/start_date_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_cannot_be_changed</fullName>
    <active>false</active>
    <description>Start date of leave cannot be changed after record has been created</description>
    <errorConditionFormula>PRIORVALUE(Start_Date_and_Time__c)&lt;=NOW() &amp;&amp; ISCHANGED(Start_Date_and_Time__c )</errorConditionFormula>
    <errorMessage>Start Date cannot be changed</errorMessage>
</ValidationRule>