force-app/main/default/objects/REVA_Hostel_Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>End_Date_and_Time__c</columns>
    <columns>Start_Date_and_Time__c</columns>
    <columns>Total_Leaves_in_Days__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>